@@ -2,18 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>onionbrowser</string>
-				<string>onionbrowsers</string>
-			</array>
-			<key>CFBundleURLName</key>
-			<string>com.miketigas.onionbrowser</string>
-		</dict>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -58,6 +46,18 @@
 	<string>1.3.13</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.miketigas.onionbrowser</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>onionbrowser</string>
+				<string>onionbrowsers</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>20131117.1</string>
 	<key>LSRequiresIPhoneOS</key>
