@@ -9,7 +9,7 @@ Version History:<br><a href="https://raw.github.com/mtigas/iOS-OnionBrowser/mast
     <p>&copy; 2012-2014 Mike Tigas<br>(<a href="https://mike.tig.as/">https://mike.tig.as/</a> | <a href="http://tigas3l7uusztiqu.onion/">tigas3l7uusztiqu.onion</a>)</p>
     <ul>
         <li><b>OnionBrowser</b>: 1.3.13 (20131117.1)</li>
-        <li><b>Tor</b>: 0.2.4.18-rc (Nov 16 2013)</li>
+        <li><b>Tor</b>: 0.2.4.20 (Dec 23 2013)</li>
         <li><b>libevent</b>: 2.0.21-stable (Nov 18 2012)</li>
         <li><b>OpenSSL</b>: 1.0.1f (Jan 06 2014)</li>
     </ul>
